[gd_scene load_steps=13 format=2]

[ext_resource path="res://Racers/Scenes/Vehicle1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Racers/Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Racers/Assets/Materials/M_Player.tres" type="Material" id=3]
[ext_resource path="res://Racers/SFX/565598__c-v__diesel-idle-1.wav" type="AudioStream" id=4]
[ext_resource path="res://Racers/SFX/346034__insintesi__jet-engine-1.wav" type="AudioStream" id=5]
[ext_resource path="res://Levels/TestTerrain/Assets/Materials/GroundWetRocks/Ground_Wet_Rocks_001_basecolor.jpg" type="Texture" id=6]
[ext_resource path="res://Game/Scenes/SinglePlayerHUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Racers/Scripts/DetectRay.gd" type="Script" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 2.5

[sub_resource type="ParticlesMaterial" id=2]
direction = Vector3( 0, 0, 5 )
spread = 10.0
gravity = Vector3( 0, -2, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.19
angle = 96.0
angle_random = 0.87

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.47451, 0.439216, 0.321569, 0.266667 )
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 2, 2 )

[node name="Player" type="KinematicBody"]
collision_mask = 3
script = ExtResource( 2 )

[node name="Engine" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2, 0 )
material/0 = ExtResource( 3 )

[node name="KinematicCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
shape = SubResource( 1 )

[node name="GroundDetect1" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.65, -0.75 )
enabled = true
cast_to = Vector3( 0, -2.1, 0 )
collision_mask = 2
script = ExtResource( 8 )
type = "Ground"

[node name="GroundDetect2" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.65, 0.75 )
enabled = true
cast_to = Vector3( 0, -2.1, 0 )
collision_mask = 2
script = ExtResource( 8 )
type = "Ground"

[node name="UpDetect1" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.75, -1.25 )
enabled = true
cast_to = Vector3( 0, 0, -0.3 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="UpDetect2" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.75, 1.25 )
enabled = true
cast_to = Vector3( 0, 0, -0.3 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="LeftDetect1" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.75, 0, -1.25 )
enabled = true
cast_to = Vector3( 0, 0, -0.3 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="LeftDetect2" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.75, 0, 1.25 )
enabled = true
cast_to = Vector3( 0, 0, -0.3 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="RightDetect1" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.75, 0, -1.25 )
enabled = true
cast_to = Vector3( 0, 0, -0.3 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="RightDetect2" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.75, 0, 1.25 )
enabled = true
cast_to = Vector3( 0, 0, -0.3 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="FrontDetect" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.125 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="RearDetect" type="RayCast" parent="KinematicCollisionShape"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 2.125 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )
collision_mask = 2
script = ExtResource( 8 )
type = "Side"

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.22729, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 0.946766, 0.321921, 0, -0.321921, 0.946766, 0, 8.683, 16.439 )
doppler_tracking = 2
current = true
fov = 50.0
far = 1000.0

[node name="HUD" parent="RotationHelper/Camera" instance=ExtResource( 7 )]

[node name="Audio_Jet" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82496, 0 )
stream = ExtResource( 5 )
unit_db = -10.0
unit_size = 15.0
max_db = 2.0
pitch_scale = 1.5
autoplay = true
bus = "Player_SFX"

[node name="Audio_Diesel" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82496, 0 )
stream = ExtResource( 4 )
unit_db = -8.16
unit_size = 15.0
pitch_scale = 1.5
autoplay = true
bus = "Player_SFX"

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0227087, 0 )
visible = false
generate_lightmap = false
amount = 300
lifetime = 2.0
randomness = 0.18
visibility_aabb = AABB( -1.57502, -1.68518, -0.482215, 3.25055, 3.24511, 8.85 )
local_coords = false
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="CrashTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="is_colliding" from="KinematicCollisionShape/GroundDetect1" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/GroundDetect2" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/UpDetect1" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/UpDetect2" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/LeftDetect1" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/LeftDetect2" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/RightDetect1" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/RightDetect2" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/FrontDetect" to="." method="check_ray_collision"]
[connection signal="is_colliding" from="KinematicCollisionShape/RearDetect" to="." method="check_ray_collision"]
[connection signal="timeout" from="CrashTimer" to="." method="_crash_finished"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_VisibilityTimer_timeout"]
